<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/emergency_btn_direct_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/redemergencygreyed"
                android:padding="30dp"
                android:text="@string/emergency_SMS"
                android:textAllCaps="true"
                android:textColor="@color/whitegreyed"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/emergency_btn_twilio_sms_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/redemergencygreyed"
                android:padding="30dp"
                android:text="@string/emergency_sms_twilio_sms"
                android:textAllCaps="true"
                android:textColor="@color/whitegreyed"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/emergency_btn_twilio_call_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/redemergencygreyed"
                android:padding="30dp"
                android:text="@string/emergency_sms_twilio_sms_call"
                android:textAllCaps="true"
                android:textColor="@color/whitegreyed"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/emergency_btn_twilio_sms_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/redemergency"
                android:padding="30dp"
                android:text="@string/emergency_sms_twilio_api"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/emergency_btn_twilio_call_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/redemergency"
                android:padding="30dp"
                android:text="@string/emergency_call_twilio_api"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>